# sharp

./: .gitignore  README.md  pyproject.toml
sharp/: __init__.py  __main__.py  agent_sessions.py  assistant.py  audio.py  commands.py  config.py  gemini.py  live.py  memory.py  storage.py  stt.py  tools.py  tts.py  wake.py
sharp/tui/: __init__.py  app.py  sharp.tcss  visualizer.py
tests/: test_core.py
