[project]
name = "sharp"
version = "0.1.0"
description = "Sharp — Jarvis-подобный AI-агент для терминала (TUI + Gemini + голос)"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "textual>=0.60.0",
    "rich>=13.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "SpeechRecognition>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.scripts]
sharp = "sharp.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sharp*"]

[tool.setuptools.package-data]
sharp = ["tui/*.tcss"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
